changing theme functionality  added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<div [class.alternative]="themeService.switch">
 <app-navigation>
   <app-message></app-message>
   <router-outlet></router-outlet>
 </app-navigation>
+</div>
