--- a/src/app/account-details/account-details.component.html
+++ b/src/app/account-details/account-details.component.html
@@ -2,9 +2,10 @@
     
 </div> -->
 <div style="display: block;height: 80vh;" fxLayoutAlign="center center" fxLayout="column" fxLayoutGap="30px">
-    <mat-card style=" background: #D1C4E9">
+    <mat-card>
         <mat-card-content>
-            Change the password and email
+            Change only the values you want to update! <br>
+            <span style="color:red;"> Keep blank to keep values same. </span>
         </mat-card-content>
     </mat-card>
     <mat-card >
@@ -16,15 +17,18 @@
         <mat-card-content>
             <form class="example-form">
                 <mat-form-field class="example-full-width">
-                    <input [(ngModel)]="AccountDetails.email" name="email" matInput placeholder="Email" type="email">
+                    <input [(ngModel)]="AccountDetails.email" name="email" matInput placeholder="Email" type="email" [formControl]="email">
+                    <mat-error *ngIf="email.invalid">{{getErrorMessageEmail()}}</mat-error>
                 </mat-form-field>
                 <br>
-                <mat-form-field class="example-full-width">
-                    <input [(ngModel)]="AccountDetails.password" name="password" matInput placeholder="*Password" [type]="hidePassword ? 'password' : 'text'">
-                    <mat-icon matSuffix (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility' : 'visibility_off'}}</mat-icon>
+                <mat-form-field class="example-full-width" hintLabel="Minimum 6 characters long">
+                    <input #input [(ngModel)]="AccountDetails.password" name="password" matInput placeholder="Password" [type]="hidePassword ? 'password' : 'text'" [formControl]="password">
+                    <mat-icon matSuffix (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    <mat-hint align="end">Count: {{input.value?.length || 0}}</mat-hint>
+                    <mat-error *ngIf="password.invalid">{{getErrorMessagePassword()}}</mat-error>
                 </mat-form-field>
                 <br>
-                <button (click)="change_details()" mat-raised-button color="primary">Update</button>
+                <button (click)="change_details()" style="margin-top:20px;" mat-raised-button color="primary">Update</button>
             </form>
         </mat-card-content>
     </mat-card>
