--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,8 +1,8 @@
 <div class="paginator" style="position: fixed;z-index: 99;right:0;width: 100vw;">
-  <div style="background:rgb(250, 250, 250); height: 30px; text-align: center;padding: 5px;">
+  <div style="height: 30px; text-align: center;padding: 5px;">
   <span style="font-size: 25px;">{{pagetitle}}</span>    
   </div>
-    <mat-paginator style="background: rgb(250,250,250); border:none;"  [length]="5"
+    <mat-paginator style="border:none;  background: none;"  [length]="5"
               [pageSize]="5"
               [pageSizeOptions]="[5, 10, 25, 100]">
     </mat-paginator>
@@ -22,8 +22,8 @@
             <mat-card-actions>
               <div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
               <button mat-stroked-button (click)="openDialog(book.isbn)" *ngIf="!_authService.Admin">Checkout</button>
-              <button mat-stroked-button color="warn" *ngIf="_authService.Admin" (click)="remove(book.isbn)">Delete</button>
-              <button mat-stroked-button (click)="openDialog1()" *ngIf="_authService.Admin">Update</button>              
+              <button mat-stroked-button color="warn" *ngIf="_authService.Admin" (click)="openDialog1(book.isbn)">Delete</button>
+              <button mat-stroked-button (click)="openDialog2(book)" *ngIf="_authService.Admin">Update</button>              
             </div>
             </mat-card-actions>
           </mat-card>
