--- a/src/app/util/navigation/navigation.component.html
+++ b/src/app/util/navigation/navigation.component.html
@@ -49,7 +49,7 @@
   </mat-sidenav-content>
 </mat-sidenav-container> -->
 <div class="example-container">
-  <mat-toolbar color="primary" class="example-toolbar">
+  <mat-toolbar color="primary" class="example-toolbar dark-">
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
@@ -60,6 +60,7 @@
       Library Management System
     </h1>
     <span class="right-spacer"></span>
+    <button mat-stroked-button style="margin-right:15px;" (click)='themeService.changeTheme()'>Change Theme</button>
     <form class="example-form" *ngIf="navigationService.showRegister">
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Search" list="books">
