--- a/src/app/issue-history/issue-history.component.css
+++ b/src/app/issue-history/issue-history.component.css
@@ -10,3 +10,7 @@ table {
   th.mat-sort-header-sorted {
     color: black;
   }
+  .example-container {
+    height: 300px;
+    overflow: auto;
+  }
