--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,4 +1,4 @@
-<div class="paginator" style="position: fixed;z-index: 99;right:0;width: 100vw;">
+<div class="paginator mat-drawer-container" style="position: fixed;z-index: 99;right:0;width: 100vw;">
   <div style="height: 30px; text-align: center;padding: 5px;">
   <span style="font-size: 25px;">{{pagetitle}}</span>    
   </div>
