--- a/src/app/issue-history/issue-history.component.html
+++ b/src/app/issue-history/issue-history.component.html
@@ -1,13 +1,16 @@
-<div style=" height: 30px; text-align: center;padding: 5px;">
-  <span style="font-size: 25px;">Issue History</span>
+<div class="mat-drawer-container" style="position: fixed; height: 130px;">
+  <div style=" height: 30px; text-align: center;padding: 5px; width: 100vw;z-index: 99; top: 80px; ">
+    <span style="font-size: 25px;">Issue History</span>
+  </div>
+  <div style=" position: fixed;z-index: 100;top:130px;width: 100vw;">
+    <mat-form-field style="width: 50%;">
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the table (using any data you wish..)">
+    </mat-form-field>
+    <mat-paginator style="float:right; background: none; width: 50%;" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
 </div>
-<div>
-  <mat-form-field style="width: 50%;">
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the table (using any data you wish..)">
-  </mat-form-field>
-  <mat-paginator style="float:right; background: none; width: 50%;" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>    
-</div>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="example-container mat-elevation-z8" style="margin-top: 150px">
+<table mat-table [dataSource]="dataSource">
 
   <!-- Position Column -->
   <ng-container matColumnDef="serial">
@@ -59,6 +62,7 @@
       <button mat-stroked-button color="warn" (click)="openDialog(element.isbn)">Return</button>
     </td>
   </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</div>
