minor changes in routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div [class.alternative]="themeService.switch">
-<app-navigation>
-  <app-message></app-message>
-  <router-outlet></router-outlet>
-</app-navigation>
+  <mat-spinner *ngIf="true"></mat-spinner>
+  <app-navigation>
+    <app-message></app-message>
+    <router-outlet></router-outlet>
+  </app-navigation>
 </div>
