--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,31 +1,57 @@
 <div class="paginator mat-drawer-container" style="position: fixed;z-index: 99;right:0;width: 100vw;">
-  <div style="height: 30px; text-align: center;padding: 5px;">
-  <span style="font-size: 25px;">{{pagetitle}}</span>    
+  <div style="height: 30px;padding: 5px; text-align: center;">
+    <mat-form-field style="position: fixed;left:10px;">
+      <mat-select placeholder="Browse">
+        <mat-option [routerLink]="['/browse', 'mat']">
+          Mathematics
+        </mat-option>
+        <mat-option [routerLink]="['/browse', 'sci']">
+          Science
+        </mat-option>
+        <mat-option [routerLink]="['/browse', 'tec']">
+          Technology
+        </mat-option>
+        <mat-option [routerLink]="['/browse', 'his']">
+          History
+        </mat-option>
+        <mat-option [routerLink]="['/browse', 'hea']">
+          Health
+        </mat-option>
+        <mat-option [routerLink]="['/browse', 'ent']">
+          Entertainment
+        </mat-option>
+        <mat-option [routerLink]="['/browse', 'fic']">
+          Fiction
+        </mat-option>
+        <mat-option [routerLink]="['/browse', 'mis']">
+          Miscellaneous
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <span style="font-size: 25px;">{{pagetitle}}</span>
   </div>
-    <mat-paginator style="border:none;  background: none;"  [length]="5"
-              [pageSize]="5"
-              [pageSizeOptions]="[5, 10, 25, 100]">
-    </mat-paginator>
+  <mat-paginator style="border:none;  background: none;" [length]="5" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]">
+  </mat-paginator>
 </div>
 <mat-grid-list cols="5" style="margin-top:15px;">
-    <mat-grid-tile *ngFor='let book of _bookService.books' [colspan]="1" [rowspan]="1.5">
-        <mat-card class="example-card">
-              <div style="width: 100%; text-align: center;">
-                <div class="example-header-image"> </div>
-              </div>
-            <mat-card-content style="text-align: center;"> 
-                <mat-card-title>{{book.author}}</mat-card-title>
-                <mat-card-subtitle>{{book.title}}</mat-card-subtitle>
-                <mat-card-subtitle style="font-size:12px; color: grey; margin: 0px;"> Book Id: {{book.isbn}}</mat-card-subtitle>
-                <mat-card-subtitle style="font-size:12px; color: grey; margin: 0px;"> Location: {{book.location}}</mat-card-subtitle>
-            </mat-card-content>
-            <mat-card-actions>
-              <div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
-              <button mat-stroked-button (click)="openDialog(book.isbn)" *ngIf="!_authService.Admin">Checkout</button>
-              <button mat-stroked-button color="warn" *ngIf="_authService.Admin" (click)="openDialog1(book.isbn)">Delete</button>
-              <button mat-stroked-button (click)="openDialog2(book)" *ngIf="_authService.Admin">Update</button>              
-            </div>
-            </mat-card-actions>
-          </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
+  <mat-grid-tile *ngFor='let book of _bookService.books' [colspan]="1" [rowspan]="1.5">
+    <mat-card class="example-card">
+      <div style="width: 100%; text-align: center;">
+        <div class="example-header-image"> </div>
+      </div>
+      <mat-card-content style="text-align: center;">
+        <mat-card-title>{{book.author}}</mat-card-title>
+        <mat-card-subtitle>{{book.title}}</mat-card-subtitle>
+        <mat-card-subtitle style="font-size:12px; color: grey; margin: 0px;"> Book Id: {{book.isbn}}</mat-card-subtitle>
+        <mat-card-subtitle style="font-size:12px; color: grey; margin: 0px;"> Location: {{book.location}}</mat-card-subtitle>
+      </mat-card-content>
+      <mat-card-actions>
+        <div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
+          <button mat-stroked-button (click)="openDialog(book.isbn)" *ngIf="!_authService.Admin">Checkout</button>
+          <button mat-stroked-button color="warn" *ngIf="_authService.Admin" (click)="openDialog1(book.isbn)">Delete</button>
+          <button mat-stroked-button (click)="openDialog2(book)" *ngIf="_authService.Admin">Update</button>
+        </div>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
