--- a/src/app/issue-history/issue-history.component.html
+++ b/src/app/issue-history/issue-history.component.html
@@ -4,7 +4,7 @@
   </div>
   <div style=" position: fixed;z-index: 100;top:130px;width: 100vw;">
     <mat-form-field style="width: 50%;">
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the table (using any data you wish..)">
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the results">
     </mat-form-field>
     <mat-paginator style="float:right; background: none; width: 50%;" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
