minor flaw fixed

--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -11,6 +11,9 @@
         <mat-option [routerLink]="['/browse', 'tec']">
           Technology
         </mat-option>
+        <mat-option [routerLink]="['/browse', 'art']">
+          Art
+        </mat-option>
         <mat-option [routerLink]="['/browse', 'his']">
           History
         </mat-option>
