--- a/src/app/issue-history/issue-history.component.html
+++ b/src/app/issue-history/issue-history.component.html
@@ -6,7 +6,7 @@
     <mat-form-field style="width: 50%;">
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter the results">
     </mat-form-field>
-    <mat-paginator style="float:right; background: none; width: 50%;" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator style="float:right; background: none; width: 50%;" (page)="onPaginateChange($event)" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </div>
 <div class="example-container mat-elevation-z8" style="margin-top: 150px">
@@ -14,8 +14,8 @@
 
   <!-- Position Column -->
   <ng-container matColumnDef="serial">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element; let i = index"> {{i+1}} </td>
+    <th mat-header-cell *matHeaderCellDef> Sr. No. </th>
+    <td mat-cell *matCellDef="let element; let i = index"> {{i+1+index}} </td>
   </ng-container>
 
   <ng-container matColumnDef="email" *ngIf="_authService.Admin">
