--- a/src/app/util/navigation/navigation.component.html
+++ b/src/app/util/navigation/navigation.component.html
@@ -88,21 +88,16 @@
     [attr.role]="(media === 'xs' || media === 'sm') ? 'dialog' : 'navigation'" 
     [opened]="false" (window:resize)="onResize($event)">
       <mat-nav-list class="left_nav_list">
+        <div class="content" *ngIf="authService.isAuthenticated" [routerLink]="['/issue_history']" style="cursor: pointer;">
+          <mat-icon>history</mat-icon>
+          <span class="text_content"> Checkout history </span>
+        </div>
+        <br *ngIf="authService.isAuthenticated">
         <div class="content" *ngIf="authService.Admin" [routerLink]="['/register_book']">
           <mat-icon>book</mat-icon>
           <span class="text_content"> Regsiter book </span>
         </div>
         <br *ngIf="authService.Admin">
-        <div class="content" *ngIf="authService.isAuthenticated" [routerLink]="['/account_details']" style="cursor: pointer;">
-          <mat-icon>account_circle</mat-icon>
-          <span class="text_content"> Account details </span>
-        </div>
-        <br *ngIf="authService.isAuthenticated">
-        <div class="content" *ngIf="authService.isAuthenticated" [routerLink]="['/issue_history']" style="cursor: pointer;">
-          <mat-icon>history</mat-icon>
-          <span class="text_content"> Issue history </span>
-        </div>
-        <br *ngIf="authService.isAuthenticated">
         <div class="content" (click)="show=!show" style="cursor: pointer;">
           <mat-icon>dashboard</mat-icon>
           <span class="text_content"> Browse </span>
@@ -131,7 +126,12 @@
           <a class="content" [routerLink]="['/browse', 'mis']">Miscellaneous</a>
           <br>
         </div>
-        <br *ngIf="!authService.isAuthenticated">
+        <br>
+        <div class="content" *ngIf="authService.isAuthenticated" [routerLink]="['/account_details']" style="cursor: pointer;">
+          <mat-icon>account_circle</mat-icon>
+          <span class="text_content"> Account details </span>
+        </div>
+        <br *ngIf="authService.isAuthenticated">
         <div class="content" *ngIf="!authService.isAuthenticated" [routerLink]="['/login']" style="cursor: pointer;">
           <mat-icon>account_box</mat-icon>
           <span class="text_content">Login</span>
@@ -141,7 +141,6 @@
           <mat-icon>note_add</mat-icon>
           <span class="text_content">Register</span>
         </div>
-        <br *ngIf="authService.isAuthenticated">
         <div class="content" *ngIf="authService.isAuthenticated" (click)="this.authService.logout()" style="cursor: pointer;">
           <mat-icon>power_settings_new</mat-icon>
           <span class="text_content">Logout</span>
