--- a/src/app/account-details/account-details.component.html
+++ b/src/app/account-details/account-details.component.html
@@ -4,7 +4,7 @@
 <div style="display: block;height: 80vh;" fxLayoutAlign="center center" fxLayout="column" fxLayoutGap="30px">
     <mat-card>
         <mat-card-content>
-            Change only the values you want to update! <br>
+            Enter only fields you want to update! <br>
             <!-- <span style="color:red;"> Keep blank to keep values same. </span> -->
         </mat-card-content>
     </mat-card>
