--- a/src/app/util/navigation/navigation.component.css
+++ b/src/app/util/navigation/navigation.component.css
@@ -123,6 +123,9 @@
   .icon_content{
     margin-left:70px;
   }
+  .icon_content:hover {
+    background: rgba(1, 1, 1, 0.5);
+  }
   .header_link {
     color: white;
     text-decoration: none;
