--- a/src/app/util/navigation/navigation.component.html
+++ b/src/app/util/navigation/navigation.component.html
@@ -63,7 +63,7 @@
     <!-- <button mat-stroked-button style="margin-right:15px;" (click)='themeService.changeTheme()'>Change Theme</button> -->
     <form class="example-form" *ngIf="navigationService.showRegister">
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Search" list="books">
+        <input matInput placeholder="Search book" list="books">
         <!-- <datalist id="books">
           <option value="Out of box"></option>
         </datalist> -->
