--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,17 @@
     <app-message></app-message>
     <router-outlet></router-outlet>
   </app-navigation>
+
 </div>
+<!-- 
+<div [class.alternative]="themeService.switch">
+  <footer class="footer">
+    <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        Made by <a href="https://github.com/spyashu">Ashish Naik</a> and <a href="https://github.com/rashikak295">Rashika Koul</a>
+      </p>
+    </div>
+    </div>
+  </footer>
+</div> -->
