--- a/src/app/issue-history/issue-history.component.html
+++ b/src/app/issue-history/issue-history.component.html
@@ -72,9 +72,9 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<mat-card *ngIf="dataSource.data.length === 0" style="align-content: center; width: 25vw;position: fixed; top: 50vh; left:37vw;">
+<mat-card *ngIf="dataSource.data.length === 0" style="text-align: center; width: 25vw;margin-top:80px; left:37vw;">
   <mat-card-content>
-    There are no items to display. <br>
+    There are no items to display.
   </mat-card-content>
 </mat-card>
 </div>
