--- a/src/app/account-details/account-details.component.html
+++ b/src/app/account-details/account-details.component.html
@@ -16,7 +16,7 @@
                 </mat-form-field>
                 <br>
                 <mat-form-field class="example-full-width" hintLabel="Minimum 6 characters long">
-                    <input #input [(ngModel)]="AccountDetails.password" name="password" matInput placeholder="Password" [type]="hidePassword ? 'password' : 'text'" [formControl]="password">
+                    <input #input [(ngModel)]="AccountDetails.password" name="password" matInput placeholder="Password" [type]="hidePassword ? 'password' : 'text'" [formControl]="password" required>
                     <mat-icon style="cursor: pointer;" matSuffix (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
                     <mat-hint align="end">Count: {{input.value?.length || 0}}</mat-hint>
                 </mat-form-field>
